@@ -26,6 +26,7 @@ npm install --silent -y --save-dev \
 #export AVD_VERSION=25
 #export ANDROID_BUILD_TOOLS_VERSION=25.0.3 
 #export SDK_VERSION=25.2.3
+export JAVA_OPTS='-XX:+IgnoreUnrecognizedVMOptions --add-modules java.se.ee'
 export ANDROID_HOME=/users/runner/Library/Android/sdk
 #mkdir -p $ANDROID_HOME
 #cd $ANDROID_HOME
